[gd_scene load_steps=8 format=3 uid="uid://b0x764v7qrymq"]

[ext_resource type="FontFile" uid="uid://bck4vn8cx20wc" path="res://assets/fonts/Sagu Exora.ttf" id="1_alifs"]
[ext_resource type="Theme" uid="uid://cj754d21e4sd0" path="res://themes/s3rpent.tres" id="1_u0gbl"]
[ext_resource type="Script" path="res://gameover.gd" id="2_2no3n"]
[ext_resource type="Texture2D" uid="uid://jkuqg5m053s3" path="res://assets/buttons_and_setting_background/button.png" id="2_kvn32"]
[ext_resource type="Texture2D" uid="uid://vom4wga2kxi8" path="res://assets/buttons_and_setting_background/button (highlight).png" id="3_0b3lv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n4s05"]
texture = ExtResource("2_kvn32")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0kbcx"]
texture = ExtResource("3_0b3lv")

[node name="Gameover" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_u0gbl")
script = ExtResource("2_2no3n")

[node name="CenterContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 550
theme_override_constants/margin_right = 550

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="GameoverLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_alifs")
theme_override_font_sizes/font_size = 151
text = "GAME
OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.258824, 0.564706, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(1, 0.258824, 0.564706, 1)
theme_override_colors/font_outline_color = Color(1, 0.258824, 0.564706, 1)
theme_override_fonts/font = ExtResource("1_alifs")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_n4s05")
theme_override_styles/hover = SubResource("StyleBoxTexture_0kbcx")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0kbcx")
theme_override_styles/disabled = SubResource("StyleBoxTexture_n4s05")
theme_override_styles/focus = SubResource("StyleBoxTexture_0kbcx")
text = "Replay"

[node name="Button3" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.258824, 0.564706, 1)
theme_override_fonts/font = ExtResource("1_alifs")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_n4s05")
theme_override_styles/hover = SubResource("StyleBoxTexture_0kbcx")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0kbcx")
theme_override_styles/disabled = SubResource("StyleBoxTexture_n4s05")
theme_override_styles/focus = SubResource("StyleBoxTexture_0kbcx")
text = "Upload Score"

[node name="Button4" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(650, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.258824, 0.564706, 1)
theme_override_fonts/font = ExtResource("1_alifs")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_n4s05")
theme_override_styles/hover = SubResource("StyleBoxTexture_0kbcx")
theme_override_styles/pressed = SubResource("StyleBoxTexture_0kbcx")
theme_override_styles/disabled = SubResource("StyleBoxTexture_n4s05")
theme_override_styles/focus = SubResource("StyleBoxTexture_0kbcx")
text = "Quit to Main Menu"

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="PlayAgain" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_u0gbl")
theme_type_variation = &"GameoverButton"
theme_override_font_sizes/font_size = 30
text = "Play Again"

[node name="UploadScore" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(320, 60)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_u0gbl")
theme_type_variation = &"GameoverButton"
theme_override_font_sizes/font_size = 30
text = "Upload Score"

[node name="MainMenu" type="Button" parent="CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme = ExtResource("1_u0gbl")
theme_type_variation = &"GameoverButton"
theme_override_font_sizes/font_size = 30
text = "Main Menu"

[connection signal="button_up" from="CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/PlayAgain" to="." method="_on_play_again_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/MarginContainer2/VBoxContainer/MainMenu" to="." method="_on_main_menu_button_up"]
